Fix problem of alignement

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ circle.progress {
     position: absolute;
     fill: none;
     stroke: url(#circle.progress.color);
-    stroke-width: 4vmin;
+    stroke-width: 4.5vmin;
     stroke-linecap: round;
     transform-origin: center;
     transform: rotate(-90deg);
@@ -52,10 +52,10 @@ svg {
     position: absolute;
     left: 50vw;
     top: 50vh;
-    width: 95vmin;
-    height: 95vmin;
-    margin-top: -47.5vmin;
-    margin-left: -47.5vmin;
+    width: 90.5vmin;
+    height: 90.5vmin;
+    margin-top: -45.25vmin;
+    margin-left: -45.25vmin;
 }
 
 svg text {
@@ -69,6 +69,6 @@ svg text {
         stroke-dashoffset: 0;
     }
     100% {
-        stroke-dashoffset: calc(45vmin * var(--pi) * 2);
+        stroke-dashoffset: calc(45.5vmin * var(--pi) * 2);
     }
 }
